// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Custom Pipe Default 1`] = `
<app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <name>
    <h1>
      CustomPipe: foobar
    </h1>
  </name>
</app-root>
`;

exports[`Storyshots Custom Pipe/With Knobs NameComponent 1`] = `
<app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <name>
    <h1>
      CustomPipe: foobar
    </h1>
  </name>
</app-root>
`;

exports[`Storyshots Custom ngModule metadata simple 1`] = `
<app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <simple-service-component>
    
      
    <p>
      Static name:
    </p>
    
      
    <ul>
      
        
      
      
      
    </ul>
    
    
  </simple-service-component>
</app-root>
`;

exports[`Storyshots Custom ngModule metadata with knobs 1`] = `
<app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <simple-service-component>
    
      
    <p>
      Dynamic knob:
    </p>
    
      
    <ul>
      
        
      
      
      
    </ul>
    
    
  </simple-service-component>
</app-root>
`;
